--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,14 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cookit!</title>
-    <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="vendor/css/tela-inicial.css" type="text/css">
-    <link rel="stylesheet" href="vendor/css/navbar.css" type="text/css">
+
+    <link rel="stylesheet" href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" type="text/css">
+    <link rel="stylesheet" href="{% static 'vendor/bootstrap/css/tela-inicial.css' %}" type="text/css">
+    <link rel="stylesheet" href="{% static 'vendor/bootstrap/css/navbar.css' %}" type="text/css">
     
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/99ce75f39c.js" crossorigin="anonymous"></script>
@@ -17,7 +19,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex justify-content-between fixed-top">
         <a class="navbar-brand" href="#">
-          <img src="cookit_logo.svg" alt="" height="36px">
+          <img src="{% static 'vendor/imgs/cookit_logo.svg' %}" alt="Logo" height="36px">
         </a>
         <form class="form-inline <!--mr-auto my-2 my-lg-0-->" >
           <div id="search" class="input-group">
@@ -58,7 +60,7 @@
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <img src="cookit_user.svg" alt="" height="20px">
+                <img src="{% static 'vendor/imgs/cookit_user.svg' %}" alt="" height="20px">
               </a>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="#">Action</a>
