Telas de favoritos de cadastro de usuario incluidas

--- a/templates/parciais/_head.html
+++ b/templates/parciais/_head.html
@@ -7,6 +7,12 @@
 <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}" type="text/css">
 <link rel="stylesheet" href="{% static 'custom/css/tela-inicial.css' %}" type="text/css">
 <link rel="stylesheet" href="{% static 'custom/css/navbar.css' %}" type="text/css">
+<link rel="stylesheet" href="{% static 'custom/css/favoritos.css' %}">
+<link rel="stylesheet" href="{% static 'custom/css/usuario_casdastro.css' %}">
+
+
+<link rel="stylesheet" href="{% static 'custom/js/favoritos.js' %}">
+
 
 <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 <script src="https://kit.fontawesome.com/99ce75f39c.js" crossorigin="anonymous"></script>
