--- a/usuario/templates/usuario/EditarPerfil.html
+++ b/usuario/templates/usuario/EditarPerfil.html
@@ -1,80 +1,77 @@
-{% load static %}
-
+{%load static%}
+<!-- TODO:Ver se pode deixar load static nesta página-->
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Editar Perfil</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="{% static 'vendor/bootstrap/css/EditarPerfil.css' %}" type="text/css">
-    <link rel="stylesheet" href="{% static 'vendor/bootstrap/css/EditarPerfil2.css' %}" type="text/css">
-    
-    <link rel="stylesheet" href="script.js">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/92b503f04d.js" crossorigin="anonymous"></script>
+    {%include 'parciais/_head.html'%}
 </head>
+
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex justify-content-between fixed-top">
         <a class="navbar-brand" href="#">
-          <img src="{% static 'vendor/imgs/cookit_logo.svg' %}" alt="" height="36px">
+            <img src="{%static 'imgs/cookit_logo.svg'%}" alt="" height="36px">
         </a>
-        <form class="form-inline <!--mr-auto my-2 my-lg-0-->" >
-          <div id="search" class="input-group">
-            <input  id="search-input" class="form-control" type="search" placeholder="Search" aria-label="Search">
-            <button id="search-button" class="btn btn-success" type="submit">
-              <i class="fas fa-search"></i>
-            </button>
-          </div>
+        <form class="form-inline <!--mr-auto my-2 my-lg-0-->">
+            <div id="search" class="input-group">
+                <input id="search-input" class="form-control" type="search" placeholder="Search" aria-label="Search">
+                <button id="search-button" class="btn btn-success" type="submit">
+                    <i class="fas fa-search"></i>
+                </button>
+            </div>
         </form>
         <div class="" id="navbarSupportedContent">
-          <ul class="nav">
-            <li class="nav-item dropdown">
-              <a class="nav-link" href="#" role="button">
-                <h5><i class="fas fa-book"></i></h5>
-              </a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <h5><i class="fas fa-bell"></i></h5>
-              </a>
-              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <div class="dropdown-divider"></div>
-                <a id="nav-icon" class="dropdown-item" href="#">Something else here</a>
-              </div>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <h5><i class="fas fa-heart"></i></h5>
-              </a>
-              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a>
-              </div>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <img src="{% static 'vendor/imgs/cookit_user.svg' %}" alt="" height="20px">
-              </a>
-              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a>
-              </div>
-            </li>
-          </ul>
+            <ul class="nav">
+                <li class="nav-item dropdown">
+                    <a class="nav-link" href="#" role="button">
+                        <h5><i class="fas fa-book"></i></h5>
+                    </a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
+                        <h5><i class="fas fa-bell"></i></h5>
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">Action</a>
+                        <a class="dropdown-item" href="#">Another action</a>
+                        <div class="dropdown-divider"></div>
+                        <a id="nav-icon" class="dropdown-item" href="#">Something else here</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
+                        <h5><i class="fas fa-heart"></i></h5>
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">Action</a>
+                        <a class="dropdown-item" href="#">Another action</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Something else here</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
+                        <img src="{% static 'imgs/cookit_user.svg' %}" alt="" height="20px">
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">Action</a>
+                        <a class="dropdown-item" href="#">Another action</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Something else here</a>
+                    </div>
+                </li>
+            </ul>
         </div>
     </nav>
     <div class="container">
         <h4 class="font-weight-bold mb-3">Dados Gerais</h4>
         <div class="row mb-3">
             <div class="col-sm d-flex justify-content-center">
-                <img src="{% static 'vendor/imgs/cookit_user.svg' %}"/>
+                <img src="{% static 'imgs/cookit_user.svg' %}" />
             </div>
             <div class="col-sm">
                 <textarea class="form-control h-100" rows="4" id="comment"></textarea>
@@ -173,7 +170,7 @@
                     <div class="card-body">
                         <h5 class="card-title font-weight-bold">Visibilidade de Perfil</h5>
                         <div class="custom-control custom-switch">
-                             <input type="checkbox" class="custom-control-input">
+                            <input type="checkbox" class="custom-control-input">
                             <label class="custom-control-label" for="customSwitch1">Visível para todos</label>
                         </div>
                         <div class="custom-control custom-switch">
@@ -237,6 +234,7 @@
                 </div>
             </div>
         </div>
-    </div>       
+    </div>
 </body>
+
 </html>
