--- a/templates/parciais/_head.html
+++ b/templates/parciais/_head.html
@@ -3,16 +3,22 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+<!--Organizar nome de classes CSS para não haver contradições entre outras páginas -->
 
 <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}" type="text/css">
 <link rel="stylesheet" href="{% static 'custom/css/tela-inicial.css' %}" type="text/css">
 <link rel="stylesheet" href="{% static 'custom/css/navbar.css' %}" type="text/css">
 <link rel="stylesheet" href="{% static 'custom/css/favoritos.css' %}">
-<link rel="stylesheet" href="{% static 'custom/css/usuario_casdastro.css' %}">
+<link rel="stylesheet" href="{% static 'custom/css/usuario_cadastro.css' %}">
+<link rel="stylesheet" href="{% static 'custom/css/cadastro-editar_receita.css' %}">
+<link rel="stylesheet" href="{% static 'custom/css/cadastro-editar_receita2.css' %}">
 
 
 <link rel="stylesheet" href="{% static 'custom/js/favoritos.js' %}">
 
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
 <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 <script src="https://kit.fontawesome.com/99ce75f39c.js" crossorigin="anonymous"></script>
