--- a/core/templates/usuario/cadastro-editar_receita.html
+++ b/core/templates/usuario/cadastro-editar_receita.html
@@ -15,8 +15,8 @@
     </a>
     <form class="form-inline <!--mr-auto my-2 my-lg-0-->">
       <div id="search" class="input-group">
-        <input id="search-input" class="form-control" type="search" placeholder="Search" aria-label="Search">
-        <button id="search-button" class="btn btn-success" type="submit">
+        <input id="search-input-editarreceita" class="form-control" type="search" placeholder="Search" aria-label="Search">
+        <button id="search-button-editarreceita" class="btn btn-success" type="submit">
           <i class="fas fa-search"></i>
         </button>
       </div>
@@ -77,28 +77,28 @@
         <div class="f"></div>
       </div>
       <div class="form-group">
-        <ul id="thumbnail-input-group" class="jumbotron d-flex justify-content-around p-0">
-          <li class="form-control rounded-circle d-flex justify-content-center align-items-center" id="thumbnail-input">
+        <ul id="thumbnail-input-group-editarreceita" class="jumbotron d-flex justify-content-around p-0">
+          <li class="form-control rounded-circle d-flex justify-content-center align-items-center" id="thumbnail-input-editarreceita">
             <a href="">
               <i class="fas fa-camera"></i>
             </a>
           </li>
-          <li class="form-control rounded-circle d-flex justify-content-center align-items-center" id="thumbnail-input">
+          <li class="form-control rounded-circle d-flex justify-content-center align-items-center" id="thumbnail-input-editarreceita">
             <a href="">
               <i class="fas fa-camera"></i>
             </a>
           </li>
-          <li class="form-control rounded-circle d-flex justify-content-center align-items-center" id="thumbnail-input">
+          <li class="form-control rounded-circle d-flex justify-content-center align-items-center" id="thumbnail-input-editarreceita">
             <a href="">
               <i class="fas fa-camera"></i>
             </a>
           </li>
-          <li class="form-control rounded-circle d-flex justify-content-center align-items-center" id="thumbnail-input">
+          <li class="form-control rounded-circle d-flex justify-content-center align-items-center" id="thumbnail-input-editarreceita">
             <a href="">
               <i class="fas fa-camera"></i>
             </a>
           </li>
-          <li class="form-control rounded-circle d-flex justify-content-center align-items-center" id="thumbnail-input">
+          <li class="form-control rounded-circle d-flex justify-content-center align-items-center" id="thumbnail-input-editarreceita">
             <a href="">
               <i class="fas fa-camera"></i>
             </a>
@@ -113,19 +113,19 @@
           <input id="input" type="text" class="form-control rounded-pill" placeholder="Categorias">
         </div>
       </div>
-      <div id="prep" class="row">
-        <div id="prep-mode" class="form-group col-sm">
+      <div id="prep-editarreceita" class="row">
+        <div id="prep-mode-editarreceita" class="form-group col-sm">
           <div class="jumbotron">
             <h4>Modo de Preparo</h4>
-            <div id="prep-input" class="form-group form-control d-flex">
+            <div id="prep-input-editarreceita" class="form-group form-control d-flex">
               <label for="">1.</label>
               <textarea type="text"></textarea>
             </div>
-            <div id="prep-input" class="form-group form-control d-flex">
+            <div id="prep-input-editarreceita" class="form-group form-control d-flex">
               <label for="">2.</label>
               <textarea type="text"></textarea>
             </div>
-            <div id="prep-input" class="form-group form-control d-flex">
+            <div id="prep-input-editarreceita" class="form-group form-control d-flex">
               <label for="">3.</label>
               <textarea type="text"></textarea>
             </div>
@@ -151,30 +151,30 @@
               <div class="input-group-prepend">
                 <label class="input-group-text">Porções</label>
               </div>
-              <input class="form-control" id="portions" type="number" min="1">
+              <input class="form-control" id="portions-editarreceita" type="number" min="1">
             </div>
             <div class="form-group input-group">
               <div class="input-group-prepend">
                 <label class="input-group-text">Tempo de preparo</label>
               </div>
-              <input id="prep-time" type="time" class="form-control">
+              <input id="prep-time-editarreceita" type="time" class="form-control">
             </div>
             <div class="form-group input-group">
               <div class="input-group-prepend">
                 <label class="input-group-text">Nível de dificuldade</label>
               </div>
-              <select id="difficulty" class="form-control custom-select">
-                <option id="easy" value="1">Fácil</option>
-                <option id="medium" value="2">Médio</option>
-                <option id="hard" value="3">Difícil</option>
-                <option id="super" value="4">Super</option>
+              <select id="difficulty-editarreceita" class="form-control custom-select">
+                <option id="easy-editarreceita" value="1">Fácil</option>
+                <option id="medium-editarreceita" value="2">Médio</option>
+                <option id="hard-editarreceita" value="3">Difícil</option>
+                <option id="super-editarreceita" value="4">Super</option>
               </select>
             </div>
             <textarea type="text" class="form-group form-control" placeholder="Observações adicionais"></textarea>
           </div>
         </div>
       </div>
-      <button id="submit-button" type="submit" class="btn btn-primary btn-block rounded-pill">Postar</button>
+      <button id="submit-button-editarreceita" type="submit" class="btn btn-primary btn-block rounded-pill">Postar</button>
     </form>
   </div>
 </body>
