Renomeando tags CSS, reestruturando a tela de favoritos e removendo telas de login

--- a/core/templates/parciais/_conteudo_receita.html
+++ b/core/templates/parciais/_conteudo_receita.html
@@ -1,8 +1,8 @@
-<div id="receitas" class="row">
+<div id="receitas-tela-inicial" class="row">
     <div class="col-sm">
-        <div class="receita">
+        <div class="receita-tela-inicial">
             <a href="" class="row d-flex justify-content-between align-items-center">
-                <h1 class="utensils d-flex justify-content-center align-items-center rounded-circle">
+                <h1 class="utensils-tela-inicial d-flex justify-content-center align-items-center rounded-circle">
                     <i class="fas fa-utensils"></i>
                 </h1>
                 <div class="col text-center">
@@ -16,7 +16,7 @@
                 </div>
                 <h3><i class="col far fa-heart"></i></h3>
             </a>
-            <div class="prep-mode row">
+            <div class="prep-mode-tela-inicial row">
                 <p class="text-justify">
                     <b>1.</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Suspendisse cursus laoreet viverra. Cras non purus porttitor, rutrum metus at, vehicula sem.
@@ -32,7 +32,7 @@
                 </p>
             </div>
             <div class="row">
-                <div class="info col">
+                <div class="info-tela-inicial col">
                     <div class="row">
                         <div class="col">
                             <i class="far fa-clock"></i>
@@ -44,22 +44,22 @@
                         </div>
                     </div>
                 </div>
-                <ul class="ingredients col">
+                <ul class="ingredients-tela-inicial col">
                     <li>1 xicara de arroz</li>
                     <li>1 cebola picada</li>
                     <li>2 dentes de alho</li>
                     <li>Azeite</li>
                 </ul>
             </div>
-            <button class="see-more btn">
+            <button class="see-more-tela-inicial btn">
                 <i class="fas fa-book-open"></i>
             </button>
         </div>
     </div>
     <div class="col-sm">
-        <div class="receita">
+        <div class="receita-tela-inicial">
             <a href="" class="row d-flex justify-content-between align-items-center">
-                <h1 class="utensils d-flex justify-content-center align-items-center rounded-circle">
+                <h1 class="utensils-tela-inicial d-flex justify-content-center align-items-center rounded-circle">
                     <i class="fas fa-utensils"></i>
                 </h1>
                 <div class="col text-center">
@@ -73,7 +73,7 @@
                 </div>
                 <h3><i class="col far fa-heart"></i></h3>
             </a>
-            <div class="prep-mode row">
+            <div class="prep-mode-tela-inicial row">
                 <p class="text-justify">
                     <b>1.</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Suspendisse cursus laoreet viverra. Cras non purus porttitor, rutrum metus at, vehicula sem.
@@ -89,7 +89,7 @@
                 </p>
             </div>
             <div class="row">
-                <div class="info col">
+                <div class="info-tela-inicial col">
                     <div class="row">
                         <div class="col">
                             <i class="far fa-clock"></i>
@@ -101,23 +101,23 @@
                         </div>
                     </div>
                 </div>
-                <ul class="ingredients col">
+                <ul class="ingredients-tela-inicial col">
                     <li>1 xicara de arroz</li>
                     <li>1 cebola picada</li>
                     <li>2 dentes de alho</li>
                     <li>Azeite</li>
                 </ul>
             </div>
-            <button class="see-more btn">
+            <button class="see-more-tela-inicial btn">
                 <i class="fas fa-book-open"></i>
             </button>
         </div>
     </div>
     <div class="w-100"></div>
     <div class="col-sm">
-        <div class="receita">
+        <div class="receita-tela-inicial">
             <a href="" class="row d-flex justify-content-between align-items-center">
-                <h1 class="utensils d-flex justify-content-center align-items-center rounded-circle">
+                <h1 class="utensils-tela-inicial d-flex justify-content-center align-items-center rounded-circle">
                     <i class="fas fa-utensils"></i>
                 </h1>
                 <div class="col text-center">
@@ -131,7 +131,7 @@
                 </div>
                 <h3><i class="col far fa-heart"></i></h3>
             </a>
-            <div class="prep-mode row">
+            <div class="prep-mode-tela-inicial row">
                 <p class="text-justify">
                     <b>1.</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Suspendisse cursus laoreet viverra. Cras non purus porttitor, rutrum metus at, vehicula sem.
@@ -147,7 +147,7 @@
                 </p>
             </div>
             <div class="row">
-                <div class="info col">
+                <div class="info-tela-inicial col">
                     <div class="row">
                         <div class="col">
                             <i class="far fa-clock"></i>
@@ -159,22 +159,22 @@
                         </div>
                     </div>
                 </div>
-                <ul class="ingredients col">
+                <ul class="ingredients-tela-inicial col">
                     <li>1 xicara de arroz</li>
                     <li>1 cebola picada</li>
                     <li>2 dentes de alho</li>
                     <li>Azeite</li>
                 </ul>
             </div>
-            <button class="see-more btn">
+            <button class="see-more-tela-inicial btn">
                 <i class="fas fa-book-open"></i>
             </button>
         </div>
     </div>
     <div class="col-sm">
-        <div class="receita">
+        <div class="receita-tela-inicial">
             <a href="" class="row d-flex justify-content-between align-items-center">
-                <h1 class="utensils d-flex justify-content-center align-items-center rounded-circle">
+                <h1 class="utensils-tela-inicial d-flex justify-content-center align-items-center rounded-circle">
                     <i class="fas fa-utensils"></i>
                 </h1>
                 <div class="col text-center">
@@ -188,7 +188,7 @@
                 </div>
                 <h3><i class="col far fa-heart"></i></h3>
             </a>
-            <div class="prep-mode row">
+            <div class="prep-mode-tela-inicial row">
                 <p class="text-justify">
                     <b>1.</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Suspendisse cursus laoreet viverra. Cras non purus porttitor, rutrum metus at, vehicula sem.
@@ -204,7 +204,7 @@
                 </p>
             </div>
             <div class="row">
-                <div class="info col">
+                <div class="info-tela-inicial col">
                     <div class="row">
                         <div class="col">
                             <i class="far fa-clock"></i>
@@ -216,14 +216,14 @@
                         </div>
                     </div>
                 </div>
-                <ul class="ingredients col">
+                <ul class="ingredients-tela-inicial col">
                     <li>1 xicara de arroz</li>
                     <li>1 cebola picada</li>
                     <li>2 dentes de alho</li>
                     <li>Azeite</li>
                 </ul>
             </div>
-            <button class="see-more btn">
+            <button class="see-more-tela-inicial btn">
                 <i class="fas fa-book-open"></i>
             </button>
         </div>
