--- a/core/static/custom/css/style.css
+++ b/core/static/custom/css/style.css
@@ -1,3 +1,16 @@
+* {
+    font-family: 'Montserrat', sans-serif;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+body {
+    margin-top: 70px !important;
+    background-color: lightgray;
+    display: flex;
+}
+
 /* Cad. Edit. Receita */
 
 .navbar {
@@ -49,22 +62,8 @@ i {
     color: black;
 }
 
-
 /* Cad. Edit. Receita */
 /*-editarreceita*/
-
-* {
-    /*font-family: 'Quicksand', sans-serif;*/
-    font-family: 'Montserrat', sans-serif;
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
-body {
-    background-color: lightgray;
-    margin-top: 70px;
-}
 
 /*
 .Textefdp{
@@ -207,22 +206,8 @@ textarea,
     height: 460px !important;
 }
 
-
 /* Edit. Perfil */
 /*-editarperfil*/
-
-* {
-    /*font-family: 'Quicksand', sans-serif;*/
-    font-family: 'Montserrat', sans-serif;
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
-body {
-    margin-top: 70px;
-    background-color: #F3EFEF;
-}
 
 .container {
     border-left: 1px solid gray;
@@ -235,11 +220,11 @@ body {
     background-color: #F3EFEF;
 }
 
-.config-1 {
+.config-1-editarperfil {
     height: 180px !important;
 }
 
-.config-2 {
+.config-2-editarperfil {
     height: 340px !important;
 }
 
@@ -257,109 +242,49 @@ textarea,
     border-radius: 2em !important;
 }
 
-.social input {
+.social-editarperfil input {
     border-radius: 0 2em 2em 0 !important;
     width: 90%;
 }
 
-.social .input-group-text {
+.social-editarperfil .input-group-text {
     border-radius: 2em 0 0 2em !important;
     width: 40px;
 }
 
-
-/* Edit. Perfil2 */
-
-.navbar {
-    background-color: #F3EFEF !important;
-    border-bottom: 1px solid #707070;
-}
-
-#nav-icon {
-    color: black;
-    vertical-align: middle;
-}
-
-.nav-link {
-    padding: 0 1vw 0 1vw;
-}
-
-.navbar-brand {
-    align-self: center;
-    justify-content: center;
-    font-size: 0;
-}
-
-#nav-icon-span {
-    font-size: 12px;
-}
-
-#search-input {
-    outline: none;
-    box-shadow: none !important;
-    border-radius: 36px 0 0 36px;
-    border: 1px solid gray;
-    width: 20vw;
-}
-
-#search-button {
-    border-radius: 0 36px 36px 0;
-    padding: 0 1em 0 1em;
-    background-color: white;
-    border: 1px solid gray;
-    color: gray;
-    margin-left: -1px;
-}
-
-#search-button i {
-    vertical-align: middle;
-}
-
-i {
-    color: black;
-}
-
-h4 {
-    text-align: center;
-}
-
-
 /* Fav. */
+/* -favoritos */
 
-.verticalLine {
-    border-left: thick solid lightgrey;
+.stars-favoritos{
+    color:yellow;
 }
-
-.stars {
-    color: yellow;
+.receitas-favoritos{
+    background-color:  #F3EFEF;
+    border: 1px solid gray;
 }
-
-.xis {
-    margin-left: 350px;
-    margin-top: -35px;
+.receita-favoritos{
+    border: 1px solid gray;
 }
-
-.coração {
-    margin-left: 320px;
-    margin-bottom: -25px;
+.utensils-favoritos{
+    text-align: center;
+    font-size: 2em;
+    height: 2em;
+    width: 2em;
+    border: 1px solid gray;
+    background-color: lightgray;
 }
-
-.detalhes {
-    margin-left: 10%;
+.see-more-favoritos, .see-more-favoritos:hover{
+    width: 20%;
+    align-self: center;
+    border-radius: 1em 1em 0 0 !important;
+    border: 1px solid gray;
+    border-bottom-width: 0;
+    background-color: lightgray;
+    color: black;
+    font-size: 1.5em;
 }
-
-.ingredientes {
-    margin-left: 50%;
-    margin-top: -40%;
-}
-
-.form-inline {
-    margin-left: 40%;
-}
-
 
 /*========================================================================*/
-
 
 /* dropdown */
 
@@ -374,7 +299,6 @@ h4 {
 .redColor {
     background-color: #E60000;
 }
-
 
 /* Navbar */
 
@@ -422,37 +346,7 @@ h4 {
     vertical-align: middle;
 }
 
-
-/* Tela Inicial */
-
-* {
-    /*font-family: 'Quicksand', sans-serif;*/
-    font-family: 'Montserrat', sans-serif;
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
-body {
-    background-color: #F3EFEF;
-    display: flex;
-    padding-top: 70px !important;
-}
-
-.container {
-    background-color: white;
-}
-
-input,
-select,
-.input-group-text,
-.receita {
-    border: 1px solid #707070 !important;
-}
-
-.input-group-text {
-    margin-bottom: -1px;
-}
+/* Sidebar */
 
 #sidebar {
     padding: 1em;
@@ -492,7 +386,25 @@ select,
     border-radius: 0 0 1em 1em;
 }
 
-#receitas {
+/* Tela Inicial */
+/* -tela-inicial */
+
+.container {
+    background-color: white;
+}
+
+input,
+select,
+.input-group-text,
+.receita {
+    border: 1px solid #707070 !important;
+}
+
+.input-group-text {
+    margin-bottom: -1px;
+}
+
+#receitas-tela-inicial {
     padding: 1em 0 0 1em;
     background-color: #F3EFEF;
     margin: 1em 0 1em 0;
@@ -500,7 +412,7 @@ select,
     border: 1px solid #707070;
 }
 
-.receita {
+.receita-tela-inicial {
     padding: 2em 2em 0 2em !important;
     background-color: white;
     border-radius: 0.5em;
@@ -516,7 +428,7 @@ a:hover {
     color: black;
 }
 
-.utensils {
+.utensils-tela-inicial {
     text-align: center;
     height: 2em;
     width: 2em;
@@ -533,18 +445,18 @@ ul li {
     padding-left: 0 !important;
 }
 
-.prep-mode {
+.prep-mode-tela-inicial {
     border-bottom: 1px solid gray;
     margin-bottom: 1em;
 }
 
-.ingredients {
+.ingredients-tela-inicials {
     padding-left: 2em !important;
     border-left: 1px solid gray;
 }
 
-.see-more,
-.see-more:hover {
+.see-more-tela-inicial,
+.see-more-tela-inicial:hover {
     width: 100%;
     align-self: center;
     border-radius: 1em 1em 0 0 !important;
@@ -555,7 +467,7 @@ ul li {
     font-size: 1.5em;
 }
 
-.info,
+.info-tela-inicial,
 .stars {
     text-align: center;
 }
@@ -568,125 +480,7 @@ ul li {
     color: yellowgreen;
 }
 
-#keywords {
+#keywords-tela-inicial {
     padding: 1em 1em 0 1em;
     border-bottom: 1px solid black;
-}
-
-
-/* Usuario Cadastro */
-
-.header {
-    text-align: center;
-}
-
-.body {
-    background-color: grey;
-}
-
-.container {
-    margin-top: -100px;
-    margin-right: 30px;
-    margin-bottom: -75px;
-}
-
-.form-control {
-    display: inline-block;
-}
-
-.vertical-center {
-    min-height: 100%;
-    /* Fallback for browsers do NOT support vh unit */
-    min-height: 100vh;
-    /* These two lines are counted as one :-)       */
-    display: flex;
-    align-items: center;
-    margin-left: 460px;
-}
-
-.font-weight-bolder {
-    font-size: 150%;
-    margin-left: 50px;
-}
-
-.login-form {
-    width: 340px;
-    margin: 30px auto;
-    font-size: 15px;
-}
-
-.login-form form {
-    margin-bottom: 15px;
-    background: #f7f7f7;
-    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-    padding: 30px;
-}
-
-.login-form h2 {
-    margin: 0 0 15px;
-}
-
-.login-form .hint-text {
-    color: #777;
-    padding-bottom: 15px;
-    text-align: center;
-    font-size: 13px;
-}
-
-.form-control,
-.btn {
-    min-height: 38px;
-    border-radius: 2px;
-}
-
-.login-btn {
-    font-size: 15px;
-    font-weight: bold;
-}
-
-.or-seperator {
-    margin: 20px 0 10px;
-    text-align: center;
-    border-top: 1px solid #ccc;
-}
-
-.or-seperator i {
-    padding: 0 10px;
-    background: #f7f7f7;
-    position: relative;
-    top: -11px;
-    z-index: 1;
-}
-
-.social-btn .btn {
-    margin: 10px 0;
-    font-size: 15px;
-    text-align: left;
-    line-height: 24px;
-}
-
-.social-btn .btn i {
-    float: left;
-    margin: 4px 15px 0 5px;
-    min-width: 15px;
-}
-
-.input-group-addon .fa {
-    font-size: 18px;
-}
-
-body,
-html {
-    height: 100%;
-}
-
-.bg {
-    /* The image used */
-    background-image: url("https://i.pinimg.com/originals/d3/6d/46/d36d462db827833805497d9ea78a1343.jpg");
-    /* Full height */
-    height: 100%;
-    /* Center and scale the image nicely */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
 }
