--- a/core/templates/usuario/EditarPerfil.html
+++ b/core/templates/usuario/EditarPerfil.html
@@ -78,19 +78,19 @@
             </div>
             <div class="col-sm">
                 <form>
-                    <div class="social form-group input-group">
+                    <div class="social-editarperfil form-group input-group">
                         <div class="input-group-prepend" for="">
                             <h4 class="input-group-text"><i class="fab fa-instagram"></i></h4>
                         </div>
                         <input type="text" class="form-control" placeholder="https://www.instagram.com/">
                     </div>
-                    <div class="social form-group input-group">
+                    <div class="social-editarperfil form-group input-group">
                         <div class="input-group-prepend" for="">
                             <h4 class="input-group-text"><i class="fab fa-facebook-f"></i></h4>
                         </div>
                         <input type="text" class="form-control" placeholder="https://www.facebook.com/">
                     </div>
-                    <div class="social form-group input-group">
+                    <div class="social-editarperfil form-group input-group">
                         <div class="input-group-prepend" for="">
                             <h4 class="input-group-text"><i class="fab fa-twitter"></i></h4>
                         </div>
@@ -102,7 +102,7 @@
         <h4 class="font-weight-bold mb-3">Notificações</h4>
         <div class="row mb-3">
             <div class="col-sm mb-4">
-                <div class="noti-config card">
+                <div class="noti-config-editarperfil card">
                     <div class="card-body">
                         <h5 class="card-title font-weight-bold">Postagem de receita</h5>
                         <div class="custom-control custom-switch">
@@ -166,7 +166,7 @@
         <h4 class="font-weight-bold mb-3">Segurança e Privacidade</h4>
         <div class="row">
             <div class="col-sm mb-4">
-                <div class="config-1 card">
+                <div class="config-1-editarperfil card">
                     <div class="card-body">
                         <h5 class="card-title font-weight-bold">Visibilidade de Perfil</h5>
                         <div class="custom-control custom-switch">
@@ -185,7 +185,7 @@
                 </div>
             </div>
             <div class="col-sm mb-4">
-                <div class="card config-1 ">
+                <div class="card config-1-editarperfil">
                     <div class="card-body form">
                         <h5 class="card-title font-weight-bold">Nome de usuário</h5>
                         <form action="">
@@ -196,7 +196,7 @@
                 </div>
             </div>
             <div class="col-sm mb-4">
-                <div class="card config-1 ">
+                <div class="card config-1-editarperfil">
                     <div class="card-body">
                         <h5 class="card-title font-weight-bold">Endereço de e-mail</h5>
                         <form action="">
@@ -208,7 +208,7 @@
             </div>
             <div class="w-100"></div>
             <div class="col-sm mb-4">
-                <div class="config-2 card">
+                <div class="config-2-editarperfil card">
                     <div class="card-body">
                         <h5 class="card-title font-weight-bold">Trocar Senha</h5>
                         <form action="">
@@ -222,7 +222,7 @@
                 </div>
             </div>
             <div class="col-sm mb-4">
-                <div class="config-2 card">
+                <div class="config-2-editarperfil card">
                     <div class="card-body">
                         <h5 class="card-title font-weight-bold">Celular</h5>
                         <form action="">
