--- a/core/templates/usuario/EditarPerfil.html
+++ b/core/templates/usuario/EditarPerfil.html
@@ -106,12 +106,12 @@
                     <div class="card-body">
                         <h5 class="card-title font-weight-bold">Postagem de receita</h5>
                         <div class="custom-control custom-switch">
-                            <input type="checkbox" class="custom-control-input">
-                            <label class="custom-control-label" for="customSwitch1">Email</label>
+                            <input type="checkbox" class="custom-control-input" id="email">
+                            <label class="custom-control-label" for="email">E-mail</label>
                         </div>
                         <div class="custom-control custom-switch">
-                            <input type="checkbox" class="custom-control-input">
-                            <label class="custom-control-label" for="customSwitch2">Perfil CookIt</label>
+                            <input type="checkbox" class="custom-control-input" id="perfil">
+                            <label class="custom-control-label" for="perfil">Perfil CookIt</label>
                         </div>
                     </div>
                 </div>
@@ -121,12 +121,12 @@
                     <div class="card-body">
                         <h5 class="card-title font-weight-bold">Comentários de minhas receitas</h5>
                         <div class="custom-control custom-switch">
-                            <input type="checkbox" class="custom-control-input">
-                            <label class="custom-control-label" for="customSwitch1">Email</label>
+                            <input type="checkbox" class="custom-control-input" id="email2">
+                            <label class="custom-control-label" for="email2">E-mail</label>
                         </div>
                         <div class="custom-control custom-switch">
-                            <input type="checkbox" class="custom-control-input">
-                            <label class="custom-control-label" for="customSwitch2">Perfil CookIt</label>
+                            <input type="checkbox" class="custom-control-input" id="perfil2">
+                            <label class="custom-control-label" for="perfil2">Perfil CookIt</label>
                         </div>
                     </div>
                 </div>
@@ -136,14 +136,17 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title font-weight-bold">Seguidores</h5>
+                        <div class="card-body">
+                        <h5 class="card-title font-weight-bold">Comentários de minhas receitas</h5>
                         <div class="custom-control custom-switch">
-                            <input type="checkbox" class="custom-control-input">
-                            <label class="custom-control-label" for="customSwitch1">Email</label>
+                            <input type="checkbox" class="custom-control-input" id="email3">
+                            <label class="custom-control-label" for="email3">E-mail</label>
                         </div>
                         <div class="custom-control custom-switch">
-                            <input type="checkbox" class="custom-control-input">
-                            <label class="custom-control-label" for="customSwitch2">Perfil CookIt</label>
+                            <input type="checkbox" class="custom-control-input" id="perfil3">
+                            <label class="custom-control-label" for="perfil3">Perfil CookIt</label>
                         </div>
+                    </div>
                     </div>
                 </div>
             </div>
@@ -151,14 +154,17 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title font-weight-bold">Postagem de seguidores</h5>
+                        <div class="card-body">
+                        <h5 class="card-title font-weight-bold">Comentários de minhas receitas</h5>
                         <div class="custom-control custom-switch">
-                            <input type="checkbox" class="custom-control-input">
-                            <label class="custom-control-label" for="customSwitch1">Email</label>
+                            <input type="checkbox" class="custom-control-input" id="email4">
+                            <label class="custom-control-label" for="email4">E-mail</label>
                         </div>
                         <div class="custom-control custom-switch">
-                            <input type="checkbox" class="custom-control-input">
-                            <label class="custom-control-label" for="customSwitch2">Perfil CookIt</label>
+                            <input type="checkbox" class="custom-control-input" id="perfil4">
+                            <label class="custom-control-label" for="perfil4">Perfil CookIt</label>
                         </div>
+                    </div>
                     </div>
                 </div>
             </div>
@@ -170,16 +176,16 @@
                     <div class="card-body">
                         <h5 class="card-title font-weight-bold">Visibilidade de Perfil</h5>
                         <div class="custom-control custom-switch">
-                            <input type="checkbox" class="custom-control-input">
-                            <label class="custom-control-label" for="customSwitch1">Visível para todos</label>
+                            <input type="checkbox" class="custom-control-input" id="visivel">
+                            <label class="custom-control-label" for="visivel">Visível para todos</label>
                         </div>
                         <div class="custom-control custom-switch">
-                            <input type="checkbox" class="custom-control-input">
-                            <label class="custom-control-label" for="customSwitch1">Somente Seguidores</label>
+                            <input type="checkbox" class="custom-control-input" id="somente">
+                            <label class="custom-control-label" for="somente">Somente Seguidores</label>
                         </div>
                         <div class="custom-control custom-switch">
-                            <input type="checkbox" class="custom-control-input">
-                            <label class="custom-control-label" for="customSwitch2">Somente quem sigo e me segue</label>
+                            <input type="checkbox" class="custom-control-input" id="somente2">
+                            <label class="custom-control-label" for="somente2">Somente quem sigo e me segue</label>
                         </div>
                     </div>
                 </div>
