--- a/core/static/custom/css/style.css
+++ b/core/static/custom/css/style.css
@@ -138,10 +138,14 @@ textarea,
     height: 60px;
 }
 
+#prep-input-editarreceita textarea{
+    min-width: 40px;
+    resize: none;
+}
+
 textarea {
     width: 100%;
     height: 100%;
-    resize: none;
 }
 
 h3,
@@ -202,7 +206,6 @@ h4 {
     background-color: #191919;
 }
 
-textarea,
 #prep-mode-editarreceita div div {
     border-radius: 18px !important;
 }
@@ -236,9 +239,6 @@ textarea,
     height: 340px !important;
 }
 
-textarea {
-    resize: none;
-}
 
 textarea,
 .card {
@@ -246,7 +246,7 @@ textarea,
 }
 
 .container button,
-.container input {
+button {
     border-radius: 2em !important;
 }
 
@@ -464,9 +464,7 @@ ul li {
     font-size: 12px;
 }
 
-.col-sm {
-    padding-left: 0 !important;
-}
+
 
 .prep-mode-tela-inicial {
     border-bottom: 1px solid gray;
