--- a/core/templates/parciais/_head.html
+++ b/core/templates/parciais/_head.html
@@ -5,10 +5,12 @@
 
 <!--Organizar nome de classes CSS para não haver contradições entre outras páginas -->
 <link rel="stylesheet" href="{% static 'custom/css/style.css' %}">
-<link rel="stylesheet" href="{% static 'custom/js/favoritos.js' %}">
+
+<script scr="{% static 'custom/js/favoritos.js' %}"></script>
 
 <!--Bootstrap CSS e Font Mont Serrat-->
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 
 
