--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -20,7 +20,9 @@
             </div>
         </div>
         <!--Depois substituir por um block de conteudo-->
-        {%include 'parciais/_conteudo_receita.html'%}
+        {% block miniatura_receita %}
+            
+        {% endblock %}
     </div>
 </body>
 </html>
