--- a/core/templates/receita/index.html
+++ b/core/templates/receita/index.html
@@ -1,1 +1,63 @@
 {% extends 'base.html'%}
+
+{%  block miniatura_receita %}
+    <div id="receitas-tela-inicial" class="row">
+    {% for receita in receitas %}
+    <div class="col-sm">
+        <div class="receita-tela-inicial">
+            <a href="" class="row d-flex justify-content-between align-items-center">
+                    {% if receita.fotos %}
+                        <img src="{{ receita.fotos.url }}" alt="{{ receita.nome_receita }}" class="img-thumbnail">
+                    {% else %}
+                        <h1 class="utensils-tela-inicial d-flex justify-content-center align-items-center rounded-circle">
+                            <i class="fas fa-utensils" aria-hidden="true"></i>
+                        </h1>
+                    {% endif %}
+                <div class="col text-center">
+                    <h5>{{ receita.nome_receita }}</h5>
+                    <p>{{ receita.dono_receita }}</p>
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="far fa-star"></span>
+                    <span class="far fa-star"></span>
+                </div>
+                <h3><i class="col far fa-heart"></i></h3>
+            </a>
+            <div class="prep-mode-tela-inicial row">
+                <!--TODO: Resumir modo de preparo em CSS-->
+                <p class="text-justify">
+                    {{ receita.modo_preparo }}
+                </p>
+    
+            </div>
+
+            <div class="row">
+                <div class="info-tela-inicial col">
+                    <div class="row">
+                        <div class="col">
+                            <i class="far fa-clock"></i>
+                            <p>{{ receita.tempo_preparo }}</p>
+                        </div>
+                        <div class="col">
+                            <i class="fas fa-pizza-slice"></i>
+                            <p>{{ receita.porcoes }}</p>
+                        </div>
+                    </div>
+                </div>
+                <!--TODO: Implementar rendenrização de ingredientes-->
+                <ul class="ingredients-tela-inicial col">
+                    <li>1 xicara de arroz</li>
+                    <li>1 cebola picada</li>
+                    <li>2 dentes de alho</li>
+                    <li>Azeite</li>
+                </ul>
+            </div>
+            <button class="see-more-tela-inicial btn">
+                <i class="fas fa-book-open"></i>
+            </button>
+        </div>
+    </div>
+    {% endfor %}
+</div>
+{%  endblock %}
