Resumindo Modo de Preparo em Preview

--- a/core/templates/receita/index.html
+++ b/core/templates/receita/index.html
@@ -25,8 +25,7 @@
                 <h3><i class="col far fa-heart"></i></h3>
             </a>
             <div class="prep-mode-tela-inicial row">
-                <!--TODO: Resumir modo de preparo em CSS-->
-                <p class="text-justify">
+                <p class="text-justify" maxlength="50">
                     {{ receita.modo_preparo }}
                 </p>
 
