--- a/core/static/custom/css/style.css
+++ b/core/static/custom/css/style.css
@@ -15,6 +15,13 @@ body {
     width: 100%;
     max-height: 180px;
 }
+p{
+    display: -webkit-box;
+   -webkit-line-clamp: 4; /* number of lines to show */
+   -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
 
 /* Cad. Edit. Receita */
 
