--- a/core/static/custom/css/style.css
+++ b/core/static/custom/css/style.css
@@ -438,7 +438,7 @@ select,
 }
 
 #receitas-tela-inicial {
-    padding: 1em 0 0 1em;
+    padding: 1em;
     background-color: #F3EFEF;
     margin: 1em 0 1em 0;
     border-radius: 1em;
