--- a/core/templates/receita/index.html
+++ b/core/templates/receita/index.html
@@ -59,4 +59,9 @@
     </div>
     {% endfor %}
 </div>
+<div class="row mt-3">
+    <div class="col">
+        {%include 'parciais/_pagination.html'%}
+    </div>
+</div>
 {%  endblock %}
