--- a/core/static/custom/css/style.css
+++ b/core/static/custom/css/style.css
@@ -12,8 +12,11 @@ body {
 }
 
 .thumbnail{
+    object-fit: cover; /* Do not scale the image */
+    object-position: center; /* Center the image within the element */
     width: 100%;
     max-height: 180px;
+    margin-bottom: 1rem;
 }
 p{
     display: -webkit-box;
