--- a/core/static/custom/css/style.css
+++ b/core/static/custom/css/style.css
@@ -11,20 +11,25 @@ body {
     display: flex;
 }
 
-.thumbnail{
-    object-fit: cover; /* Do not scale the image */
-    object-position: center; /* Center the image within the element */
+.thumbnail {
+    object-fit: cover;
+    /* Do not scale the image */
+    object-position: center;
+    /* Center the image within the element */
     width: 100%;
     max-height: 180px;
     margin-bottom: 1rem;
 }
-p{
+
+p {
     display: -webkit-box;
-   -webkit-line-clamp: 4; /* number of lines to show */
-   -webkit-box-orient: vertical;
+    -webkit-line-clamp: 4;
+    /* number of lines to show */
+    -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
 
 /* Cad. Edit. Receita */
 
@@ -515,4 +520,130 @@ ul li {
 #keywords-tela-inicial {
     padding: 1em 1em 0 1em;
     border-bottom: 1px solid black;
+}
+
+
+/* Receita Complete */
+
+
+/* -receita-completa */
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+.container {
+    border-left: 1px solid grey;
+    border-right: 1px solid grey;
+}
+
+#receita-receita-completa {
+    border: 1px solid grey;
+    border-radius: 1em;
+    background-color: darkgray;
+}
+
+#dados-receita-completa,
+#comentarios-receita-completa {
+    background-color: white;
+    border: 1px solid grey;
+    border-radius: 1em;
+    margin: 1em;
+    padding: 1em;
+}
+
+#titulo-receita-completa {
+    text-align: center;
+}
+
+#opcoes-receita-completa {
+    text-align: right;
+}
+
+#icones-receita-completa {
+    border: 1px solid grey;
+    background-color: darkgray;
+    border-radius: 1em;
+    margin: 1em;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1em;
+}
+
+.icon-text-receita-completa {
+    text-align: center;
+}
+
+.icon-text-receita-completa i {
+    font-size: 2em;
+}
+
+.utensils-receita-completa {
+    padding: 1em;
+    border: 1px solid grey;
+    background-color: darkgray;
+    max-width: 3.5em;
+    max-height: 3.5em;
+    text-align: center;
+    vertical-align: middle;
+    font-size: 1.5em;
+    margin-left: 0.5em;
+    margin-right: 0.5em;
+}
+
+#ingredientes-receita-completa ul {
+    padding: 1em;
+}
+
+#ingredientes-receita-completa ul,
+#ingredientes-receita-completa ul li {
+    list-style: none;
+    border: 1px solid grey;
+    border-radius: 1em;
+}
+
+#modo-de-preparo-receita-completa ol {
+    border: 1px solid grey;
+    background-color: darkgray;
+    border-radius: 1em;
+    list-style: decimal inside;
+    padding: 1em;
+}
+
+textarea {
+    resize: none;
+    border-radius: 1em;
+    width: 100%;
+}
+
+#usuario-receita-completa,
+#obad-receita-completa {
+    border: 1px solid grey;
+    border-radius: 1em;
+    padding: 1em;
+}
+
+#icones-usuario-receita-completa,
+#usuario-receita-completa i,
+#usuario-receita-completa h4 {
+    text-align: center;
+}
+
+#usuario-receita-completa i {
+    font-size: 4em;
+}
+
+#icones-usuario-receita-completa i {
+    font-size: 2em;
+}
+
+.line-receita-completa {
+    border-left: 1px solid black;
+    height: 80%;
+}
+
+.fa-star {
+    color: orange;
 }
